# gc_wvcp_adaptive_mcts

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  DIMACS_easy.txt  DIMACS_hard.txt  LICENSE  README.md  README.rst  bounds_nb_colors.csv  gcp_easy.txt  gcp_hard.txt  gcp_medium.txt  instances_hard_wvcp.txt  plot_score_over_time_exploi_explo.ipynb  pxx.txt  requirements.txt  rxx.txt  score_over_time.ipynb  tbt_mcts.ipynb
docs/: Doxyfile.in  conf.py  index.rst
docs/methods/: initialization.rst  local_search.rst  mcts.rst
docs/representation/: enum.rst  graph.rst  method.rst  parameters.rst  solution.rst
docs/utils/: random.rst  utils.rst
landscape/: landscape.ipynb  mds.ipynb  neutral_improve_100000_iter.ipynb
old_landscape/: landscape.ipynb
outputs/: gcp_all_NRPA.tgz
scripts/: build_doc.sh  build_python.sh  build_release.sh  get_file_name.py  one_job.sh  results_info.py  run_with_slurm.sh  slurm_ls.sh  slurm_mcts.sh  solution_checker.sh  to_eval_generator_ls.py  to_eval_generator_mcts.py  xlsx_generator.py
src/: main.cpp
src/methods/: LocalSearch.cpp  LocalSearch.hpp  MCTS.cpp  MCTS.hpp  SimulationHelper.cpp  SimulationHelper.hpp  adaptive.cpp  adaptive.hpp  afisa.cpp  afisa.hpp  afisa_original.cpp  afisa_original.hpp  greedy.cpp  greedy.hpp  hill_climbing.cpp  hill_climbing.hpp  ilsts.cpp  ilsts.hpp  neural_network.cpp  neural_network.hpp  none_ls.cpp  none_ls.hpp  partial_col.cpp  partial_col.hpp  redls.cpp  redls.hpp  redls_freeze.cpp  redls_freeze.hpp  tabu_col.cpp  tabu_col.hpp  tabu_weight.cpp  tabu_weight.hpp  useless_ls.cpp  useless_ls.hpp  worst_ls.cpp  worst_ls.hpp
src/representation/: Graph.cpp  Graph.hpp  Method.hpp  Node.cpp  Node.hpp  Parameters.cpp  Parameters.hpp  ProxiSolutionILSTS.cpp  ProxiSolutionILSTS.hpp  ProxiSolutionRedLS.cpp  ProxiSolutionRedLS.hpp  Solution.cpp  Solution.hpp  enum_types.cpp  enum_types.hpp
src/utils/: random_generator.cpp  random_generator.hpp  utils.cpp  utils.hpp
xlsx_files/: all_results_all.xlsx  gcp_all_mcts_greedy_NRPA.xlsx  wvcp_all_mcts_greedy.xlsx  wvcp_all_mcts_greedy_bounds.xlsx  wvcp_all_mcts_hh.xlsx  wvcp_all_mcts_ls.xlsx  wvcp_all_mcts_time_ls.xlsx
